overflow of videos in Gutenberg columns fixed

--- a/public/app/themes/immoticket-energieausweis/assets/dev/general.less
+++ b/public/app/themes/immoticket-energieausweis/assets/dev/general.less
@@ -943,3 +943,29 @@ article {
         }
     }
 }
+
+.feature-block-style-2 {
+    h2 {
+        margin: 15px 0 10px;
+        padding: 0;
+        font-size: 31px;
+        line-height: 1.3em;
+        letter-spacing: -.5px;        
+        font-weight: 400;
+        text-align: center;
+
+    }
+    
+    img {
+        height: 50px;
+        width: auto;
+        position: relative;
+            text-align: center
+    }
+}
+
+.column-yt {
+    iframe {
+        width: 100%
+    }
+}
